Add query params for frontend
